<resources>
    <string name="app_name">DADN</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Account name</string>
    <string name="nav_header_subtitle">Account email</string>
    <string name="nav_header_desc">Account info</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_lbadmin">Admin Panel</string>
    <string name="menu_lbmediccal_staff">Medical Staff</string>
    <string name="menu_lbaccount">My account</string>
    <string name="LeaderName">Le Huu Vo Long</string>
    <string-array name="account_type">
        <item>Quản lý</item>
        <item>Bác sỹ</item>
        <item>Y tá</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="szLoaiTaiKhoan">Loại Tài Khoản</string>
    <string name="szTenDangNhap">Tên đăng nhập</string>
    <string name="szMatKhau">Mật khẩu</string>
    <string name="szTaoTaiKhoan">Tạo tài khoản</string>
    <string name="szHuy">Hủy</string>
    <string name="szThem">Thêm</string>
    <string name="szThongTinNguoiDung">Thông tin người dùng</string>
    <string name="szHo">Họ</string>
    <string name="szCMND">Số CMND</string>
    <string name="szEmail">Email</string>
    <string name="szTen">Tên</string>
    <string name="szPhong">Phòng</string>
    <string name="szXacNhan">Xác Nhận</string>
    <string name="szListUser">Danh sách tài khoản</string>
    <string name="szUserDetailTitle">Thong tin tai khoan</string>
    <string name="szChangePass">Đổi mật khẩu</string>
    <string name="szFirstName">Ho</string>
    <string name="szLastName">Ten</string>
    <string name="szSave">Luu</string>
    <string name="szPatientList">Danh sách bệnh nhân</string>
    <string name="szBN1">Bệnh nhân 1</string>
    <string name="szBN2">Bệnh nhân 2</string>
    <string name="szBN3">Bệnh nhân 3</string>
    <string name="szDanhSachBenhNhan">Danh sách bệnh nhân</string>
    <string name="szBS3">Bác sỹ 3</string>
    <string name="szBacSiDieuTri">Bác sĩ điều trị</string>
    <string name="szBS2">Bác Sỹ 2</string>
    <string name="szBS1">Bác sỹ 1</string>
    <string name="szBS4">Bác Sỹ 4</string>
    <string name="szBS5">Bác sỹ 5</string>
    <string name="szBS6">Bác sỹ 6</string>
    <string name="szThemBacSiDieuTri">Thêm bác sĩ điều trị</string>
    <string name="tbbn1">Thông báo về bệnh nhân 1</string>
    <string name="tbbn2">Thông báo về bệnh nhân 2</string>
    <string name="tbbn3">Thông báo về bệnh nhân 3</string>
    <string name="tbbn4">Thông báo về bệnh nhân 4</string>
    <string name="TB">Thông báo về tình hình bệnh nhân</string>
    <string name="szDetailCreatedDate">Ngày tạo</string>
    <string name="szDetailListBindedPatients">Danh sách bệnh nhân quản lý</string>
    <string name="szViewBindedPatientList">Xem danh sách bệnh nhân đang quản lý</string>
    <string name="szListBindedPatientDoctor">Danh sach cac benh nhan dang quan ly</string>
    <string name="szMinute">Phút</string>
    <string name="szWarningLevel">Mức độ</string>
    <string name="szTemperature">Nhiệt độ</string>
    <string name="szCDegree">℃</string>
    <string name="szTo">Đến</string>
    <string name="szTempFrom">Từ</string>
    <string name="szUpdateRule">Cập nhật</string>
    <string name="szPlaceholder">Placeholder</string>
    <string name="szRegAcc">Đăng ký</string>
    <string name="szUpdateHealthRule">Cập nhật quy tắc y tế</string>
    <string name="szPhone">SĐT</string>
    <string name="szDeviceList">Danh sách thiết bị</string>
    <string name="szLoading">Đang tải...</string>
    <string name="szDeviceManager">Quản lý thiết bị</string>
    <string name="szAddUser">Thêm người dùng</string>
    <string name="szDuration">Thời lượng:</string>
    <string name="szChooseDevice">Chọn thiết bị</string>
    <string name="szChooseDoctor">Chọn bác sĩ</string>
    <string name="szDoctor">Bác sĩ</string>
    <string name="szAddPatient">Thêm bệnh nhân</string>
    <string name="szDelete">Xoá</string>

    <string-array name="patient_statuses">
        <item>All</item>
        <item>Recovery</item>
        <item>Incubation</item>
        <item>Emergency</item>
        <item>Febrile</item>
    </string-array>

    <string-array name="patient_list">
        <item>Nguyen Van A</item>
        <item>Nguyen Van B</item>
    </string-array>

    <string-array name="treatment_list">
        <item>Treatment 1</item>
        <item>Treatment 2</item>
    </string-array>

    <string-array name="patient_info">
        <item>Nguyen Van A</item>
        <item>18 years old</item>
    </string-array>

</resources>