<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.admin_listuser.AdminUserDetailFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:text="@string/szUserDetailTitle"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="32dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_email"
                        android:enabled="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/szTenDangNhap" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_createdate"
                        android:enabled="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/szDetailCreatedDate" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_change_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/szChangePass"
                    android:layout_marginTop="10sp"
                    android:layout_marginStart="32sp"
                    android:layout_marginEnd="32sp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="15dp">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_firstname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/szFirstName" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="32dp">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_lastname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/szLastName" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="32dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_cmnd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/szCMND" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:text="@string/szDetailListBindedPatients"/>
                <Button
                    android:id="@+id/btn_view_binded_patients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/szViewBindedPatientList"
                    android:layout_marginTop="10sp"
                    android:layout_marginStart="32sp"
                    android:layout_marginEnd="32sp"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/szSave"
                        android:layout_gravity="center"
                        android:id="@+id/btn_save"/>
                    <Space
                        android:layout_width="40dp"
                        android:layout_height="0dp"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/szDelete"
                        android:layout_gravity="center"
                        android:id="@+id/btn_delete"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>