<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.admin_listpatient.PatientDetailFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/patient_id_tv"
            android:padding="10sp"
            android:text="@string/szPlaceholder"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/szEmail" />
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="160sp"
                android:layout_marginEnd="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/szFirstName"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="160sp"
                android:layout_marginStart="32dp"

                app:layout_constraintStart_toEndOf="@id/layoutFirstName"
                app:layout_constraintTop_toTopOf="parent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/szLastName"/>
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_phonenumber"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/szPhone" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="10sp"
            android:text="Thiết bị"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_feed_in"
                        android:enabled="false"
                        android:text="@string/szLoading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Feed In" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_feed_out"
                        android:enabled="false"
                        android:text="@string/szLoading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Feed out" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <Button android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:id="@+id/btn_choose_device"
                android:text="@string/szChooseDevice"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="10sp"
            android:text="@string/szDoctor"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_doctor_name"
                    android:enabled="false"
                    android:text="@string/szLoading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/szDoctor" />
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:id="@+id/btn_choose_doctor"
                android:text="@string/szChooseDoctor"/>
        </LinearLayout>
        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_save"
            android:text="@string/szSave"
            android:layout_gravity="center" />
    </LinearLayout>


</FrameLayout>